--- a/index.html
+++ b/index.html
@@ -1,117 +1,128 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Portfolio website</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My-Portfolio-Site</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-	<!----hero Section start---->
-
 	<div class="hero">
-		<nav>
-			<h2 class="logo">Portfo<span>lio</span></h2>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About Us</a></li>
-				<li><a href="#">Services</a></li>
-				<li><a href="#">Skills</a></li>
-				<li><a href="#">Contact Us</a></li>
-			</ul>
-			<a href="#" class="btn">Subscribe</a>
-		</nav>
-
-		<div class="content">
-			<h4>Hello, my name is</h4>
-			<h1>Okoro <span>David</span></h1>
-			<h3>I'am a Web Developer.</h3>
-			<div class="newslatter">
-				<form>
+		<header>
+			<h2>Kdeli<span>cious</span></h2>
+			<nav>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About Us</a></li>
+					<li><a href="#">Services</a></li>
+					<li><a href="#">Skills</a></li>
+					<li><a href="#">Contact Us</a></li>
+				</ul>
+			</nav>
+			<a href="#" class="btn"><button>Subscribe</button> </a>
+		</header>
+    <!-- Primary section  -->
+		<div class="main-hero">
+			<main>
+				<h4>Hello, my name is</h4>
+				<br>
+				<h1>Okoro <span>David</span></h1>
+				<br>
+				<h3>I'am a Web Developer.</h3>
+				<form action="">
 					<input type="email" name="email" id="mail" placeholder="Enter Your Email">
-					<input type="submit" name="submit" value="Lets Start">
+					<input type="submit" id="btn2" name="submit" value="Lets Start" >
 				</form>
-			</div>
+			</main>
+			<img src="img/Home-pics.jpg" alt="">
 		</div>
 	</div>
-
-	<!----About section start---->
-	<section class="about">
-		<div class="main">
-			<img src="img/Home-pics.jpg">
-			<div class="about-text">
-				<h2>About Me</h2>
-				<h5>Developer <span>& Designer</span></h5>
-				<p>I am a front-end web developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.A responsive design makes your website accessible to all users, regardless of their device.</p>
-				<button type="button">Let's Talk</button>
-			</div>
-		</div>
-	</section>
-
-	<!-----service section start----------->
-	<div class="service">
-		<div class="title">
-			<h2>Our Services</h2>
-		</div>
-
-		<div class="box">
+    <!-- secondary section -->
+    <section class="sec-content">
+        <img src="img/sec2img2.jpg" alt="">
+        <div class="about-text">
+        <h2>About Me</h2><br>
+        <h5>Developer <span>& Marketer</span></h5><br>
+        <p>I am a front-end web developer. I can provide clean code and pixel perfect design.
+			 I also make the website more & more interactive with web animations.
+			 I can provide clean code and pixel perfect design.
+			I drive sales for every product I lay my hands on.
+			A responsive strategy makes your customers want to buy more, 
+			regardless the price tag.</p>
+        <br><br>
+		<a href="#" class="button">Let's Talk</a>
+        </div>
+    </section>
+    <!-- Skills section -->
+    <section class="skills">
+		<h1>Our Services</h1>
+        <div class="box">
 			<div class="card">
-				<i class="fas fa-bars"></i>
-				<h5>Web Development</h5>
+				<i class="fas fa-bars" style="padding:20px;font-size: 60px;color: #f9004d;"></i>
+				<h5>Sales !!!</h5><br>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+					<p>Every website should be built with two primary goals: 
+						Firstly, it needs to work across all devices. 
+						Secondly, it needs to be fast as possible.</p><br>
 
-					<p style="text-align: center;">
+					
 						<a class="button" href="#">Read More</a>
 					</p>
 				</div>
 			</div>
 
 			<div class="card">
-				<i class="far fa-user"></i>
-				<h5>Web Development</h5>
+				<i class="far fa-user" style="padding:20px;font-size: 60px;color: #f9004d;"></i>
+				<h5>Web Development</h5><br>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+					<p>Every website should be built with two primary goals: 
+						Firstly, it needs to work across all devices. 
+						Secondly, it needs to be fast as possible.</p><br>
 
-					<p style="text-align: center;">
+					
 						<a class="button" href="#">Read More</a>
 					</p>
 				</div>
 			</div>
 
 			<div class="card">
-				<i class="far fa-bell"></i>
-				<h5>Web Development</h5>
+				<i class="far fa-bell" style="padding:20px;font-size: 60px;color: #f9004d;"></i>
+				<h5>Digital Marketing</h5><br>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
-
-					<p style="text-align: center;">
+					<p>Every website should be built with two primary goals: 
+						Firstly, it needs to work across all devices. 
+						Secondly, it needs to be fast as possible.</p><br>
 						<a class="button" href="#">Read More</a>
 					</p>
 				</div>
 			</div>
 		</div>
 	</div>
+    </section>
 
-	<!------Contact Me------>
-	<div class="contact-me">
-		<p>Let Me Get You A Beautiful Website.</p>
-		<a class="button-two" href="#">Hire Me</a>
-	</div>
+    <!------Contact Me------>
+    <section class="bfooter">
+        <div class="contact-me">
+            <h5>Let Me Get You A Beautiful Website.</h5><br><br>
+            <a class="button" href="#">Hire Me</a>
+        </div>
+    </section>
+	
 
 	<!------footer start--------->
 	<footer>
-		<p>Tahmid Ahmed</p>
-		<p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
+		<h5>Okoro David Kosisochukwu</h5>
+		<br>
+		<p>For more HTML, CSS, and coding tutorial -
+		please click on the link below to subscribe to my channel:</p>
 		<div class="social">
 			<a href="#"><i class="fab fa-facebook-f"></i></a>
 			<a href="#"><i class="fab fa-instagram"></i></a>
-			<a href="#"><i class="fab fa-dribbble"></i></a>
-		</div>
+			<a href="https://twitter.com/okorodavidkosi/"><i class="fab fa-twitter"></i></a>
+		</div><br>
 		<p class="end">CopyRight By Okoro David</p>
 	</footer>
 </body>
